--- a/templates/settings.html
+++ b/templates/settings.html
@@ -79,16 +79,16 @@
     </style>
 </head>
 <body>
-    <div class="dashboard-container">
-        <div class="nav-bar">
-            <div class="nav-links">              
-                <span style="font-weight: bold; font-size: 20px;">
+    <span style="font-weight: bold; font-size: 30px; text-align: center;">
                     {% if current_user.is_authenticated and current_user.business_name %}
-                        {{ current_user.business_name }}
+                                   Hi {{ current_user.business_name }},
                     {% else %}
                         AKONTABU
                     {% endif %}
-                </span>
+  </span>
+    <div class="dashboard-container">
+        <div class="nav-bar">
+            <div class="nav-links">              
                 <a href="{{ url_for('dashboard') }}" class="nav-link">Dashboard</a>
                 <a href="{{ url_for('sales') }}" class="nav-link">Sales</a>
                 <a href="{{ url_for('inventory') }}" class="nav-link">Inventory</a>
